Test/Files/Parser/FullParserTestCases/Good/FullTests/Out/testcase04_01.out
<Expr> ::= Integer
<Stmt> ::= System.out.println ( <Expr> )
<StmtList> ::= epsilon
<StmtList> ::= <Stmt> <StmtList>
<MainClassDecl> ::= class ID { public static void main ( String [ ] ID ) { <StmtList> } }
<Extension> ::= epsilon
<Type> ::= ID
<ClassVarDecl> ::= <Type> ID
<Type> ::= int
<ClassVarDecl> ::= <Type> ID
<ClassVarDeclList> ::= epsilon
<ClassVarDeclList> ::= <ClassVarDecl> <ClassVarDeclList>
<ClassVarDeclList> ::= <ClassVarDecl> <ClassVarDeclList>
<Type> ::= int
<Type> ::= int
<Formal> ::= <Type> ID
<FormalList_> ::= epsilon
<FormalList> ::= <Formal> <FormalList_>
<Expr> ::= ID
<Expr> ::= Integer
<Expr> ::= <Expr> == <Expr>


Parse error on line 5:
... get(int i){if(i==0)return this.element;
-----------------------^
Expecting '{', 'if', 'while', 'printLine', 'ID', 'int', 'boolean'